{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 319,
  "lineage": "0563f90c-2445-2173-a97a-be91c7947284",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "client",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "role": "client"
                },
                "name": "client",
                "resource_version": "701",
                "uid": "8d3ce9d9-596d-44b5-8c3e-f5f39309a80a"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "management_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "management-ui",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "role": "management-ui"
                },
                "name": "management-ui",
                "resource_version": "703",
                "uid": "76f8fbd1-9aad-4cb8-a937-8cd310e4c78b"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "stars",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "stars",
            "metadata": [
              {
                "generation": 0,
                "name": "stars",
                "resource_version": "700",
                "uid": "dcd9734a-25d1-4867-981e-6c61166ab94f"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_ui_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "client/allow-ui",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-ui",
                "namespace": "client",
                "resource_version": "724",
                "uid": "a8eeced9-0f18-4988-8c0a-58d5153fedaa"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "role": "management-ui"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_ui_stars",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "stars/allow-ui",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-ui",
                "namespace": "stars",
                "resource_version": "717",
                "uid": "0d42bacf-4666-4bcb-9cf0-95a638fb69d8"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "role": "management-ui"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.stars"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "backend_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "stars/backend-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "backend-policy",
                "namespace": "stars",
                "resource_version": "712",
                "uid": "3a9ecb4b-724a-430e-b6c2-6ad1548b279d"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "role": "frontend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "port": "6379",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "role": "backend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.stars"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/default-deny",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny",
                "namespace": "default",
                "resource_version": "702",
                "uid": "98135e4e-0729-4634-833c-64c924a063fd"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "frontend_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "stars/frontend-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "frontend-policy",
                "namespace": "stars",
                "resource_version": "713",
                "uid": "a261f1d0-c983-47b8-9110-e037cd7d4e88"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "role": "client"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "80",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "role": "frontend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.stars"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "stars/backend",
            "metadata": [
              {
                "generation": 0,
                "name": "backend",
                "namespace": "stars",
                "resource_version": "711",
                "uid": "6ccbbce1-67eb-4f1d-a22b-7351e428c0e7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.111.153.150",
                "cluster_ips": [
                  "10.111.153.150"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "role": "backend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.stars"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "client/client",
            "metadata": [
              {
                "generation": 0,
                "name": "client",
                "namespace": "client",
                "resource_version": "736",
                "uid": "bb44bb16-e9e5-4cbe-b8a9-bf1a2a357678"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.106.192",
                "cluster_ips": [
                  "10.108.106.192"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "role": "client"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "stars/frontend",
            "metadata": [
              {
                "generation": 0,
                "name": "frontend",
                "namespace": "stars",
                "resource_version": "718",
                "uid": "22c43458-e158-4d18-b467-c529b250253c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.106.227.79",
                "cluster_ips": [
                  "10.106.227.79"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "role": "frontend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.stars"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "management_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "management-ui/management-ui",
            "metadata": [
              {
                "generation": 0,
                "name": "management-ui",
                "namespace": "management-ui",
                "resource_version": "723",
                "uid": "2cf29861-482b-4833-b7eb-eae8fa30b957"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.101.62.136",
                "cluster_ips": [
                  "10.101.62.136"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30002,
                    "port": 9001,
                    "protocol": "TCP",
                    "target_port": "9001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "role": "management-ui"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.management_ui"
          ]
        }
      ]
    }
  ]
}